--- a/main.html
+++ b/main.html
@@ -13,6 +13,9 @@
 
     <script type="text/javascript" src="./script.js">
 </script>
+	<div id="text">
+		<h3>Welcome to the world of web development<h3>
+	</div>
 
 </body>
 
