--- a/main.html
+++ b/main.html
@@ -13,9 +13,9 @@
 
     <script type="text/javascript" src="./script.js">
 </script>
-	<div id="text"></div>
-		<h3>Welcome to the world of web development<h3>
-<!-- 	</div> -->
+	<div id="text">
+		Welcome to the world of web development
+	</div>
 
 </body>
 
